# KubeX

./: .env.example  .gitignore  AGENT.md  ARCHITECTURE-DIAGRAMS.md  BRAINSTORM.md  BRAINSTORM.md.bak  CLAUDE.md  GETTING-STARTED.md  IMPLEMENTATION-PLAN.md  KubexClaw.md  MVP.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/debug/: capability-mismatch.md  knowledge-kubex-boot.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.squidsquad/: config.md  start-be.sh  start-fe.sh  start-pm.sh
.squidsquad/be/: CLAUDE.md  bugs.md  features.md
.squidsquad/fe/: CLAUDE.md  bugs.md
.squidsquad/pm/: CLAUDE.md  enhancements.md  qa-log.md
agents/_base/: Dockerfile  entrypoint.sh  pyproject.toml
agents/_base/kubex_harness/: PREAMBLE.md  __init__.py  cli_runtime.py  config_loader.py  harness.py  hook_server.py  main.py  mcp_bridge.py  prompt_builder.py  skill_loader.py  standalone.py  vault_ops.py
agents/hello-world/: config.yaml
agents/instagram-scraper/: Dockerfile  config.yaml
agents/knowledge/: Dockerfile  config.yaml
agents/orchestrator/: Dockerfile  config.yaml  mcp.json  orchestrator_loop.py
agents/reviewer/: Dockerfile  config.yaml
archive/: BRAINSTORM-v1.md
boundaries/: default.yaml
cancel/: __init__.py  integration.py
command-center/: .gitignore  Dockerfile  IMPROVEMENTS.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  tailwind.config.js  vite.config.ts
command-center/docs/: BUGS.md  CHANGELOG.md  FE-BE-REQUESTS.md  FE-iteration.md
command-center/public/: manifest.json
command-center/src/: App.tsx  (+3 more)
configs/: claude-test.yaml  test-cli-claude.yaml
docs/: AGENT-SYSTEM.md  HANDOFF-oauth-command-center.md  HANDOFF-phase12-oauth-fe.md  PIPELINE-AUDIT.md  POLICY-SECURITY.md  SERVICES-API.md  TEST-PLAN-W3.md  agents.md  api-layer.md  architecture.md  boundaries.md  broker.md  cli.md  command-center.md  design-hitl-context-routing.md  design-mcp-bridge.md  design-oauth-runtime.md  design-obsidian-knowledge.md  gaps.md  gateway.md  infrastructure.md  knowledge-base.md  kubex-manager.md  operations.md  prompt-caching.md  schemas.md  skill-catalog.md  tech-stack.md  user-interaction.md
knowledge-vault/: README.md
libs/kubex-common/: pyproject.toml
libs/kubex-common/kubex_common/: __init__.py  constants.py  errors.py  logging.py
libs/kubex-common/kubex_common/clients/: __init__.py  http.py  redis.py
libs/kubex-common/kubex_common/schemas/: __init__.py  actions.py  config.py  envelope.py  events.py  knowledge.py  routing.py
libs/kubex-common/kubex_common/service/: __init__.py  base.py  health.py  middleware.py
libs/kubex-common/tests/: __init__.py  conftest.py  test_constants.py  test_errors.py  test_logging.py  test_schemas.py
pipeline/: __init__.py  coordinator.py
policies/: global.yaml
scripts/: kclaw.py  reset_streams.py  smoke-test.sh  trace.py
secrets/: .gitignore  llm-api-keys.json.example
security/: __init__.py  integration.py
services/broker/: Dockerfile  pyproject.toml
services/broker/broker/: __init__.py  main.py  streams.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/gateway/: __init__.py  budget.py  identity.py  llm_proxy.py  main.py  policy.py  ratelimit.py
services/kubex-manager/: Dockerfile  pyproject.toml
services/kubex-manager/kubex_manager/: __init__.py  blocklist.yaml  config_builder.py  lifecycle.py  main.py  redis_store.py  skill_resolver.py  skill_validator.py
services/registry/: Dockerfile  pyproject.toml
services/registry/registry/: __init__.py  main.py  store.py
tests/: conftest.py
workflow/: __init__.py  coordinator.py
(+404 files in other folders)
