[project]
name = "kubexclaw"
version = "0.1.0"
description = "Agent AI Pipeline — deploy AI agents as autonomous employees"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["libs/*", "services/*"]

[tool.pytest.ini_options]
testpaths = ["tests", "libs", "services"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require docker-compose.test.yml)",
    "e2e: End-to-end tests",
    "chaos: Chaos tests",
]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "T20"]

[tool.black]
target-version = ["py312"]
line-length = 120
