[project]
name = "kubex-harness"
version = "0.1.0"
description = "KubexClaw agent harness — manages agent lifecycle inside containers"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "redis>=5.0",
    "mcp[cli]>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kubex_harness"]
