[project]
name = "kubex-common"
version = "0.1.0"
description = "Shared library for KubexClaw — schemas, service base, clients, utilities"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "redis>=5.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "black>=24.0",
    "respx>=0.21",
    "fakeredis>=2.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kubex_common"]
