[project]
name = "kubexclaw-broker"
version = "0.1.0"
description = "KubexClaw Broker — Redis Streams inter-agent message routing"
requires-python = ">=3.12"
dependencies = [
    "kubex-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["broker"]
