[project]
name = "kubexclaw-gateway"
version = "0.1.0"
description = "KubexClaw Gateway — policy engine, egress proxy, LLM reverse proxy"
requires-python = ">=3.12"
dependencies = [
    "kubex-common",
    "docker>=7.0",
    "opensearch-py>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway"]
