[project]
name = "kubexclaw-manager"
version = "0.1.0"
description = "KubexClaw Manager — Docker lifecycle management for Kubex containers"
requires-python = ">=3.12"
dependencies = [
    "kubex-common",
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kubex_manager"]
