[project]
name = "kubexclaw-registry"
version = "0.1.0"
description = "KubexClaw Registry — agent capability discovery"
requires-python = ">=3.12"
dependencies = [
    "kubex-common @ file:../../libs/kubex-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["registry"]
